src/test/deca/context/invalid/created/test-a-7.deca
class A{
    boolean  x,y,z;
    x= 15;
}